@@ -1,0 +1,6 @@
+#!/bin/sh
+
+ln -s Makefile.athlon src/Makefile
+ln -s piii src/lasieve4/asm
+echo "Symbolic links have been created."
+
